<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNoteActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTitle"
            android:hint="@string/title_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextDescription"
            android:hint="@string/description_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDaysOfWeek"
            android:layout_marginTop="8dp"
            android:entries="@array/daysOfWeek"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDaysOfWeek"
            android:id="@+id/radioGroupPriority">
        <RadioButton
                android:text="@string/high_priority"
                android:tag="1"
                android:paddingTop="@dimen/radio_padding_top"
                android:paddingBottom="@dimen/radio_padding_bottom"
                android:checked="true"
                android:background="@android:color/holo_red_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton1"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/middle_priority"
                android:tag="2"
                android:paddingTop="@dimen/radio_padding_top"
                android:paddingBottom="@dimen/radio_padding_bottom"
                android:background="@android:color/holo_orange_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/low_priority"
                android:tag="3"
                android:paddingTop="@dimen/radio_padding_top"
                android:paddingBottom="@dimen/radio_padding_bottom"
                android:background="@android:color/holo_green_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/add_note"
            android:background="@android:color/holo_purple"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickSaveNote"
            android:id="@+id/buttonSaveNote" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>